--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "node server/app.js",
+    "start": "nodemon server/app.js",
     "seed": "node server/seeder.js",
     "build": "webpack",
     "test": "jest"
@@ -21,6 +21,7 @@
     "faker": "^5.1.0",
     "mysql": "^2.18.1",
     "node": "^15.0.1",
+    "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native-customer-review-bars": "^1.0.7",
