--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "mongodb": "^3.6.3",
     "mysql": "^2.18.1",
     "node": "^15.0.1",
     "nodemon": "^2.0.6",
