--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "faker": "^5.1.0",
     "mongodb": "^3.6.3",
     "mysql": "^2.18.1",
+    "newrelic": "^7.0.2",
     "node": "^15.0.1",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
@@ -30,6 +31,7 @@
     "react-star-rating-component": "^1.4.1",
     "react-star-ratings": "^2.3.0",
     "request": "^2.88.2",
+    "sequelize": "^6.3.5",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.1",
     "webpack-cli": "^4.2.0"
@@ -39,6 +41,7 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "artillery": "^1.6.1",
     "babel-loader": "^8.2.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^26.6.3",
